---------------------------------------------------------------------------
Version 3.18.5 (rgerhards), 2008-10-??
- bugfix: imudp input module could cause segfault on HUP
  It did not properly de-init a variable acting as a linked list head.
  That resulted in trying to access freed memory blocks after the HUP.
---------------------------------------------------------------------------
Version 3.18.4 (rgerhards), 2008-09-18
- bugfix: order-of magnitude issue with base-10 size definitions
  in config file parser. Could lead to invalid sizes, constraints
  etc for e.g. queue files and any other object whose size was specified
  in base-10 entities. Did not apply to binary entities. Thanks to
  RB for finding this bug and providing a patch.
- bugfix: action was not called when system time was set backwards
  (until the previous time was reached again). There are still some
  side-effects when time is rolled back (A time rollback is really a bad
  thing to do, ideally the OS should issue pseudo time (like NetWare did)
  when the user tries to roll back time). Thanks to varmojfekoj for this
  patch.
- doc bugfix: rsyslog.conf man page improved and minor nit fixed
  thanks to Lukas Kuklinek for the patch.
- bugfix: error code -2025 was used for two different errors. queue full
  is now -2074 and -2025 is unique again. (did cause no real problem
  except for troubleshooting)
- bugfix: default discard severity was incorrectly set to 4, which lead
  to discard-on-queue-full to be enabled by default. That could cause
  message loss where non was expected.  The default has now been changed
  to the correct value of 8, which disables the functionality. This
  problem applied both to the main message queue and the action queues.
  Thanks to Raoul Bhatia for pointing out this problem.
- bugfix: option value for legacy -a option could not be specified,
  resulting in strange operations. Thanks to Marius Tomaschewski
  for the patch.